Work around problems with D&D in Qt 5.12

There are still some timing issues when dragging onto an existing
canvas, but we can't do much about that :-(

BUG:403685