libs/ui/KisMainWindow.h
@@ -142,7 +142,6 @@ public:
      */
     void showWelcomeScreen(bool show);
 
-
     /**
      * Saves the document, asking for a filename if necessary.
      *
@@ -427,11 +426,12 @@ protected:
     void resizeEvent(QResizeEvent * e) override;
 
     // QWidget overrides
-    void dragEnterEvent(QDragEnterEvent * event) override;
-    void dropEvent(QDropEvent * event) override;
-    void dragMoveEvent(QDragMoveEvent * event) override;
-    void dragLeaveEvent(QDragLeaveEvent * event) override;
 
+private:
+
+    friend class KisWelcomePageWidget;
+    void dragMove(QDragMoveEvent *event);
+    void dragLeave();
 
 private:
 
